<resources>
    <string name="app_name">IWeather</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="cities_fragment_label">Cities</string>
    <string name="historical_fragment_label">Historical</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_city">Add city</string>
    <string name="abstract_background_image">Abstract Background Image</string>
    <string name="back_image_description">Back Image includes left arrow. tap on it to go back</string>
    <string name="city_icon_image">City icon image</string>
    <string name="info_icon">Info icon</string>
    <string name="details_fragment_label">Details</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="description">Description</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">WindSpeed</string>
    <string name="city_country">%1$s, %2$s</string>
    <string name="degree">%1$s °C</string>
    <string name="description_degree">%1$s, %2$s °C</string>
    <string name="percent">%1$s %%</string>
    <string name="speed">%1$s km/h</string>
    <string name="weather_time">Weather information for %1$s received on \n%2$s</string>
    <string name="search_for_cities">Search for cities</string>
    <string name="device_not_connected">Oops! You are not connected to the internet.</string>
    <string name="undo">Undo</string>

</resources>