<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="dev.alimansour.planradarassessment.domain.model.HistoricalData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".presentation.details.DetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                android:elevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:popupTheme="@style/Theme.PlanRadarAssessment.PopupOverlay"
                app:titleTextAppearance="@style/Toolbar.TitleText">

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/CustomToolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="65dp"
                    android:layout_marginBottom="45dp"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    tools:text="App title" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big_margin"
            android:layout_marginTop="90dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="10dp"
            app:layout_anchor="@id/appBar"
            app:layout_anchorGravity="bottom|center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:background="@color/white"
                android:padding="25dp"
                android:paddingHorizontal="@dimen/normal_margin"
                tools:elevation="10dp">

                <TextView
                    android:id="@+id/title_text"
                    style="@style/TextViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/city_country(data.city.name, data.city.country)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="London,UK" />

                <info.androidhive.fontawesome.FontTextView
                    android:id="@+id/description_icon_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_cloud_sun_solid"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/largest_text_size"
                    app:layout_constraintBottom_toTopOf="@id/description_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_text"
                    app:solid_icon="true" />

                <TextView
                    android:id="@+id/description_text"
                    style="@style/TextViewDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:text="@string/description"
                    app:layout_constraintBottom_toTopOf="@id/temperature_text"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/description_value_text"
                    style="@style/TextViewDetails.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{data.description}"
                    app:layout_constraintBottom_toBottomOf="@id/description_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Cloudy" />

                <TextView
                    android:id="@+id/temperature_text"
                    style="@style/TextViewDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:text="@string/temperature"
                    app:layout_constraintBottom_toTopOf="@id/humidity_text"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/temperature_value_text"
                    style="@style/TextViewDetails.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/degree(data.temperature)}"
                    app:layout_constraintBottom_toBottomOf="@id/temperature_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="20 C" />

                <TextView
                    android:id="@+id/humidity_text"
                    style="@style/TextViewDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:text="@string/humidity"
                    app:layout_constraintBottom_toTopOf="@id/wind_speed_text"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/humidity_value_text"
                    style="@style/TextViewDetails.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/percent(data.humidity)}"
                    app:layout_constraintBottom_toBottomOf="@id/humidity_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="45%" />

                <TextView
                    android:id="@+id/wind_speed_text"
                    style="@style/TextViewDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:text="@string/wind_speed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/wind_speed_value_text"
                    style="@style/TextViewDetails.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/speed(data.windSpeed)}"
                    app:layout_constraintBottom_toBottomOf="@id/wind_speed_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="20 km/h" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="0dp"
            android:layout_height="255dp"
            android:contentDescription="@string/abstract_background_image"
            android:scaleType="fitXY"
            android:src="@drawable/back_group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/date_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@{@string/weather_time(data.date)}"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>